@@ -7,42 +7,45 @@
  */
 package io.camunda.zeebe.gateway.rest.controller;
 
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyBoolean;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.eq;
+
+import io.camunda.service.CamundaServiceException;
+import io.camunda.service.UserTaskServices;
+import io.camunda.service.security.auth.Authentication;
 import io.camunda.zeebe.broker.client.api.dto.BrokerRejection;
-import io.camunda.zeebe.broker.client.api.dto.BrokerRejectionResponse;
-import io.camunda.zeebe.broker.client.api.dto.BrokerResponse;
-import io.camunda.zeebe.gateway.api.util.StubbedBrokerClient;
-import io.camunda.zeebe.gateway.impl.broker.request.BrokerUserTaskAssignmentRequest;
-import io.camunda.zeebe.gateway.impl.broker.request.BrokerUserTaskCompletionRequest;
-import io.camunda.zeebe.gateway.impl.broker.request.BrokerUserTaskUpdateRequest;
 import io.camunda.zeebe.protocol.impl.record.value.usertask.UserTaskRecord;
 import io.camunda.zeebe.protocol.record.Assertions;
 import io.camunda.zeebe.protocol.record.RejectionType;
 import io.camunda.zeebe.protocol.record.intent.UserTaskIntent;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
-import java.util.Collections;
 import java.util.Map;
+import java.util.concurrent.CompletableFuture;
 import java.util.stream.Stream;
 import org.apache.commons.lang3.tuple.Pair;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mockito;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.context.TestConfiguration;
-import org.springframework.boot.test.mock.mockito.SpyBean;
-import org.springframework.context.annotation.Bean;
+import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 
 @WebMvcTest(UserTaskController.class)
 public class UserTaskControllerTest extends RestControllerTest {
 
-  static final BrokerResponse<UserTaskRecord> BROKER_RESPONSE =
-      new BrokerResponse<>(new UserTaskRecord());
+  static final CompletableFuture<UserTaskRecord> BROKER_RESPONSE =
+      CompletableFuture.completedFuture(new UserTaskRecord());
   static final String TEST_TIME =
       ZonedDateTime.of(2023, 11, 11, 11, 11, 11, 11, ZoneId.of("UTC")).toString();
-  @SpyBean StubbedBrokerClient brokerClient;
+
+  @MockBean UserTaskServices userTaskServices;
 
   static Stream<String> urls() {
     return Stream.of("/v1/user-tasks", "/v2/user-tasks");
@@ -68,11 +71,18 @@ public class UserTaskControllerTest extends RestControllerTest {
                     .flatMap(r -> Stream.of(Pair.of(r, url))));
   }
 
+  @BeforeEach
+  void setupServices() {
+    Mockito.when(userTaskServices.withAuthentication(any(Authentication.class)))
+        .thenReturn(userTaskServices);
+  }
+
   @ParameterizedTest
   @MethodSource("urls")
   void shouldCompleteTaskWithoutActionAndVariables(final String baseUrl) {
     // given
-    brokerClient.registerHandler(BrokerUserTaskCompletionRequest.class, request -> BROKER_RESPONSE);
+    Mockito.when(userTaskServices.completeUserTask(anyLong(), any(), anyString()))
+        .thenReturn(BROKER_RESPONSE);
     // when / then
     webClient
         .post()
@@ -84,19 +94,15 @@ public class UserTaskControllerTest extends RestControllerTest {
         .expectBody()
         .isEmpty();
 
-    final var argumentCaptor = ArgumentCaptor.forClass(BrokerUserTaskCompletionRequest.class);
-    Mockito.verify(brokerClient).sendRequest(argumentCaptor.capture());
-    Assertions.assertThat(argumentCaptor.getValue().getRequestWriter())
-        .hasUserTaskKey(2251799813685732L)
-        .hasAction("")
-        .hasVariables(Collections.emptyMap());
+    Mockito.verify(userTaskServices).completeUserTask(2251799813685732L, Map.of(), "");
   }
 
   @ParameterizedTest
   @MethodSource("urls")
   void shouldCompleteTaskWithAction(final String baseUrl) {
     // given
-    brokerClient.registerHandler(BrokerUserTaskCompletionRequest.class, request -> BROKER_RESPONSE);
+    Mockito.when(userTaskServices.completeUserTask(anyLong(), any(), anyString()))
+        .thenReturn(BROKER_RESPONSE);
     final var request =
         """
         {
@@ -116,19 +122,15 @@ public class UserTaskControllerTest extends RestControllerTest {
         .expectBody()
         .isEmpty();
 
-    final var argumentCaptor = ArgumentCaptor.forClass(BrokerUserTaskCompletionRequest.class);
-    Mockito.verify(brokerClient).sendRequest(argumentCaptor.capture());
-    Assertions.assertThat(argumentCaptor.getValue().getRequestWriter())
-        .hasUserTaskKey(1L)
-        .hasAction("customAction")
-        .hasVariables(Collections.emptyMap());
+    Mockito.verify(userTaskServices).completeUserTask(1L, null, "customAction");
   }
 
   @ParameterizedTest
   @MethodSource("urls")
   void shouldCompleteTaskWithVariables(final String baseUrl) {
     // given
-    brokerClient.registerHandler(BrokerUserTaskCompletionRequest.class, request -> BROKER_RESPONSE);
+    Mockito.when(userTaskServices.completeUserTask(anyLong(), any(), anyString()))
+        .thenReturn(BROKER_RESPONSE);
     final var request =
         """
         {
@@ -151,19 +153,15 @@ public class UserTaskControllerTest extends RestControllerTest {
         .expectBody()
         .isEmpty();
 
-    final var argumentCaptor = ArgumentCaptor.forClass(BrokerUserTaskCompletionRequest.class);
-    Mockito.verify(brokerClient).sendRequest(argumentCaptor.capture());
-    Assertions.assertThat(argumentCaptor.getValue().getRequestWriter())
-        .hasUserTaskKey(1L)
-        .hasAction("")
-        .hasVariables(Map.of("foo", "bar", "baz", 1234));
+    Mockito.verify(userTaskServices).completeUserTask(1L, Map.of("foo", "bar", "baz", 1234), "");
   }
 
   @ParameterizedTest
   @MethodSource("urls")
   void shouldCompleteTaskWithActionAndVariables(final String baseUrl) {
     // given
-    brokerClient.registerHandler(BrokerUserTaskCompletionRequest.class, request -> BROKER_RESPONSE);
+    Mockito.when(userTaskServices.completeUserTask(anyLong(), any(), anyString()))
+        .thenReturn(BROKER_RESPONSE);
     final var request =
         """
         {
@@ -187,19 +185,16 @@ public class UserTaskControllerTest extends RestControllerTest {
         .expectBody()
         .isEmpty();
 
-    final var argumentCaptor = ArgumentCaptor.forClass(BrokerUserTaskCompletionRequest.class);
-    Mockito.verify(brokerClient).sendRequest(argumentCaptor.capture());
-    Assertions.assertThat(argumentCaptor.getValue().getRequestWriter())
-        .hasUserTaskKey(1L)
-        .hasAction("customAction")
-        .hasVariables(Map.of("foo", "bar", "baz", 1234));
+    Mockito.verify(userTaskServices)
+        .completeUserTask(1L, Map.of("foo", "bar", "baz", 1234), "customAction");
   }
 
   @ParameterizedTest
   @MethodSource("urls")
   void shouldUpdateTaskWithAction(final String baseUrl) {
     // given
-    brokerClient.registerHandler(BrokerUserTaskUpdateRequest.class, request -> BROKER_RESPONSE);
+    Mockito.when(userTaskServices.updateUserTask(anyLong(), any(), anyString()))
+        .thenReturn(BROKER_RESPONSE);
     final var request =
         """
         {
@@ -219,11 +214,10 @@ public class UserTaskControllerTest extends RestControllerTest {
         .expectBody()
         .isEmpty();
 
-    final var argumentCaptor = ArgumentCaptor.forClass(BrokerUserTaskUpdateRequest.class);
-    Mockito.verify(brokerClient).sendRequest(argumentCaptor.capture());
-    Assertions.assertThat(argumentCaptor.getValue().getRequestWriter())
-        .hasUserTaskKey(1L)
-        .hasAction("customAction")
+    final var argumentCaptor = ArgumentCaptor.forClass(UserTaskRecord.class);
+    Mockito.verify(userTaskServices)
+        .updateUserTask(eq(1L), argumentCaptor.capture(), eq("customAction"));
+    Assertions.assertThat(argumentCaptor.getValue())
         .hasNoChangedAttributes()
         .hasDueDate("")
         .hasFollowUpDate("")
@@ -235,7 +229,8 @@ public class UserTaskControllerTest extends RestControllerTest {
   @MethodSource("urls")
   void shouldUpdateTaskWithChanges(final String baseUrl) {
     // given
-    brokerClient.registerHandler(BrokerUserTaskUpdateRequest.class, request -> BROKER_RESPONSE);
+    Mockito.when(userTaskServices.updateUserTask(anyLong(), any(), anyString()))
+        .thenReturn(BROKER_RESPONSE);
     final var request =
         """
         {
@@ -261,11 +256,9 @@ public class UserTaskControllerTest extends RestControllerTest {
         .expectBody()
         .isEmpty();
 
-    final var argumentCaptor = ArgumentCaptor.forClass(BrokerUserTaskUpdateRequest.class);
-    Mockito.verify(brokerClient).sendRequest(argumentCaptor.capture());
-    Assertions.assertThat(argumentCaptor.getValue().getRequestWriter())
-        .hasUserTaskKey(1L)
-        .hasAction("")
+    final var argumentCaptor = ArgumentCaptor.forClass(UserTaskRecord.class);
+    Mockito.verify(userTaskServices).updateUserTask(eq(1L), argumentCaptor.capture(), eq(""));
+    Assertions.assertThat(argumentCaptor.getValue())
         .hasChangedAttributes(
             UserTaskRecord.CANDIDATE_USERS,
             UserTaskRecord.CANDIDATE_GROUPS,
@@ -281,7 +274,8 @@ public class UserTaskControllerTest extends RestControllerTest {
   @MethodSource("urls")
   void shouldUpdateTaskWithPartialChanges(final String baseUrl) {
     // given
-    brokerClient.registerHandler(BrokerUserTaskUpdateRequest.class, request -> BROKER_RESPONSE);
+    Mockito.when(userTaskServices.updateUserTask(anyLong(), any(), anyString()))
+        .thenReturn(BROKER_RESPONSE);
     final var request =
         """
         {
@@ -305,11 +299,9 @@ public class UserTaskControllerTest extends RestControllerTest {
         .expectBody()
         .isEmpty();
 
-    final var argumentCaptor = ArgumentCaptor.forClass(BrokerUserTaskUpdateRequest.class);
-    Mockito.verify(brokerClient).sendRequest(argumentCaptor.capture());
-    Assertions.assertThat(argumentCaptor.getValue().getRequestWriter())
-        .hasUserTaskKey(1L)
-        .hasAction("")
+    final var argumentCaptor = ArgumentCaptor.forClass(UserTaskRecord.class);
+    Mockito.verify(userTaskServices).updateUserTask(eq(1L), argumentCaptor.capture(), eq(""));
+    Assertions.assertThat(argumentCaptor.getValue())
         .hasChangedAttributes(UserTaskRecord.CANDIDATE_GROUPS, UserTaskRecord.FOLLOW_UP_DATE)
         .hasDueDate("")
         .hasFollowUpDate(TEST_TIME)
@@ -321,7 +313,8 @@ public class UserTaskControllerTest extends RestControllerTest {
   @MethodSource("urls")
   void shouldUpdateTaskWithPartialEmptyValueChanges(final String baseUrl) {
     // given
-    brokerClient.registerHandler(BrokerUserTaskUpdateRequest.class, request -> BROKER_RESPONSE);
+    Mockito.when(userTaskServices.updateUserTask(anyLong(), any(), anyString()))
+        .thenReturn(BROKER_RESPONSE);
     final var request =
         """
             {
@@ -344,11 +337,9 @@ public class UserTaskControllerTest extends RestControllerTest {
         .expectBody()
         .isEmpty();
 
-    final var argumentCaptor = ArgumentCaptor.forClass(BrokerUserTaskUpdateRequest.class);
-    Mockito.verify(brokerClient).sendRequest(argumentCaptor.capture());
-    Assertions.assertThat(argumentCaptor.getValue().getRequestWriter())
-        .hasUserTaskKey(1L)
-        .hasAction("")
+    final var argumentCaptor = ArgumentCaptor.forClass(UserTaskRecord.class);
+    Mockito.verify(userTaskServices).updateUserTask(eq(1L), argumentCaptor.capture(), eq(""));
+    Assertions.assertThat(argumentCaptor.getValue())
         .hasChangedAttributes(UserTaskRecord.CANDIDATE_GROUPS, UserTaskRecord.FOLLOW_UP_DATE)
         .hasDueDate("")
         .hasFollowUpDate("")
@@ -360,7 +351,8 @@ public class UserTaskControllerTest extends RestControllerTest {
   @MethodSource("urls")
   void shouldUpdateTaskWithActionAndChanges(final String baseUrl) {
     // given
-    brokerClient.registerHandler(BrokerUserTaskUpdateRequest.class, request -> BROKER_RESPONSE);
+    Mockito.when(userTaskServices.updateUserTask(anyLong(), any(), anyString()))
+        .thenReturn(BROKER_RESPONSE);
     final var request =
         """
         {
@@ -387,11 +379,10 @@ public class UserTaskControllerTest extends RestControllerTest {
         .expectBody()
         .isEmpty();
 
-    final var argumentCaptor = ArgumentCaptor.forClass(BrokerUserTaskUpdateRequest.class);
-    Mockito.verify(brokerClient).sendRequest(argumentCaptor.capture());
-    Assertions.assertThat(argumentCaptor.getValue().getRequestWriter())
-        .hasUserTaskKey(1L)
-        .hasAction("customAction")
+    final var argumentCaptor = ArgumentCaptor.forClass(UserTaskRecord.class);
+    Mockito.verify(userTaskServices)
+        .updateUserTask(eq(1L), argumentCaptor.capture(), eq("customAction"));
+    Assertions.assertThat(argumentCaptor.getValue())
         .hasChangedAttributes(
             UserTaskRecord.CANDIDATE_USERS,
             UserTaskRecord.CANDIDATE_GROUPS,
@@ -433,7 +424,7 @@ for a supported attribute in the \\"changeset\\".",
         .expectBody()
         .json(expectedBody);
 
-    Mockito.verifyNoInteractions(brokerClient);
+    Mockito.verifyNoInteractions(userTaskServices);
   }
 
   @ParameterizedTest
@@ -474,7 +465,7 @@ for a supported attribute in the \\"changeset\\".",
         .expectBody()
         .json(expectedBody);
 
-    Mockito.verifyNoInteractions(brokerClient);
+    Mockito.verifyNoInteractions(userTaskServices);
   }
 
   @ParameterizedTest
@@ -515,7 +506,7 @@ for a supported attribute in the \\"changeset\\".",
         .expectBody()
         .json(expectedBody);
 
-    Mockito.verifyNoInteractions(brokerClient);
+    Mockito.verifyNoInteractions(userTaskServices);
   }
 
   @ParameterizedTest
@@ -559,7 +550,7 @@ RFC 3339, section 5.6.",
         .expectBody()
         .json(expectedBody);
 
-    Mockito.verifyNoInteractions(brokerClient);
+    Mockito.verifyNoInteractions(userTaskServices);
   }
 
   @ParameterizedTest
@@ -598,7 +589,7 @@ RFC 3339, section 5.6.",
         .expectBody()
         .json(expectedBody);
 
-    Mockito.verifyNoInteractions(brokerClient);
+    Mockito.verifyNoInteractions(userTaskServices);
   }
 
   @ParameterizedTest
@@ -639,19 +630,19 @@ RFC 3339, section 5.6.",
         .expectBody()
         .json(expectedBody);
 
-    Mockito.verifyNoInteractions(brokerClient);
+    Mockito.verifyNoInteractions(userTaskServices);
   }
 
   @ParameterizedTest
   @MethodSource("urls")
   void shouldYieldNotFoundWhenTaskNotFound(final String baseUrl) {
     // given
-    brokerClient.registerHandler(
-        BrokerUserTaskCompletionRequest.class,
-        request ->
-            new BrokerRejectionResponse<>(
-                new BrokerRejection(
-                    UserTaskIntent.COMPLETE, 1L, RejectionType.NOT_FOUND, "Task not found")));
+    Mockito.when(userTaskServices.completeUserTask(anyLong(), any(), anyString()))
+        .thenReturn(
+            CompletableFuture.failedFuture(
+                new CamundaServiceException(
+                    new BrokerRejection(
+                        UserTaskIntent.COMPLETE, 1L, RejectionType.NOT_FOUND, "Task not found"))));
 
     final var expectedBody =
         """
@@ -678,27 +669,22 @@ RFC 3339, section 5.6.",
         .expectBody()
         .json(expectedBody);
 
-    final var argumentCaptor = ArgumentCaptor.forClass(BrokerUserTaskCompletionRequest.class);
-    Mockito.verify(brokerClient).sendRequest(argumentCaptor.capture());
-    Assertions.assertThat(argumentCaptor.getValue().getRequestWriter())
-        .hasUserTaskKey(1L)
-        .hasAction("")
-        .hasVariables(Collections.emptyMap());
+    Mockito.verify(userTaskServices).completeUserTask(1L, Map.of(), "");
   }
 
   @ParameterizedTest
   @MethodSource("urls")
   void shouldYieldConflictWhenInvalidState(final String baseUrl) {
     // given
-    brokerClient.registerHandler(
-        BrokerUserTaskCompletionRequest.class,
-        request ->
-            new BrokerRejectionResponse<>(
-                new BrokerRejection(
-                    UserTaskIntent.COMPLETE,
-                    1L,
-                    RejectionType.INVALID_STATE,
-                    "Task is not in state CREATED")));
+    Mockito.when(userTaskServices.completeUserTask(anyLong(), any(), anyString()))
+        .thenReturn(
+            CompletableFuture.failedFuture(
+                new CamundaServiceException(
+                    new BrokerRejection(
+                        UserTaskIntent.COMPLETE,
+                        1L,
+                        RejectionType.INVALID_STATE,
+                        "Task is not in state CREATED"))));
 
     final var expectedBody =
         """
@@ -725,12 +711,7 @@ RFC 3339, section 5.6.",
         .expectBody()
         .json(expectedBody);
 
-    final var argumentCaptor = ArgumentCaptor.forClass(BrokerUserTaskCompletionRequest.class);
-    Mockito.verify(brokerClient).sendRequest(argumentCaptor.capture());
-    Assertions.assertThat(argumentCaptor.getValue().getRequestWriter())
-        .hasUserTaskKey(1L)
-        .hasAction("")
-        .hasVariables(Collections.emptyMap());
+    Mockito.verify(userTaskServices).completeUserTask(1L, Map.of(), "");
   }
 
   @ParameterizedTest
@@ -738,12 +719,12 @@ RFC 3339, section 5.6.",
   public void shouldYieldBadRequestWhenRejectionOfInput(
       final Pair<RejectionType, String> parameters) {
     // given
-    brokerClient.registerHandler(
-        BrokerUserTaskCompletionRequest.class,
-        request ->
-            new BrokerRejectionResponse<>(
-                new BrokerRejection(
-                    UserTaskIntent.COMPLETE, 1L, parameters.getLeft(), "Just an error")));
+    Mockito.when(userTaskServices.completeUserTask(anyLong(), any(), anyString()))
+        .thenReturn(
+            CompletableFuture.failedFuture(
+                new CamundaServiceException(
+                    new BrokerRejection(
+                        UserTaskIntent.COMPLETE, 1L, parameters.getLeft(), "Just an error"))));
 
     final var expectedBody =
         """
@@ -773,12 +754,7 @@ RFC 3339, section 5.6.",
         .expectBody()
         .json(expectedBody);
 
-    final var argumentCaptor = ArgumentCaptor.forClass(BrokerUserTaskCompletionRequest.class);
-    Mockito.verify(brokerClient).sendRequest(argumentCaptor.capture());
-    Assertions.assertThat(argumentCaptor.getValue().getRequestWriter())
-        .hasUserTaskKey(1L)
-        .hasAction("")
-        .hasVariables(Collections.emptyMap());
+    Mockito.verify(userTaskServices).completeUserTask(1L, Map.of(), "");
   }
 
   @ParameterizedTest
@@ -786,12 +762,12 @@ RFC 3339, section 5.6.",
   public void shouldYieldInternalErrorWhenRejectionInternal(
       final Pair<RejectionType, String> parameters) {
     // given
-    brokerClient.registerHandler(
-        BrokerUserTaskCompletionRequest.class,
-        request ->
-            new BrokerRejectionResponse<>(
-                new BrokerRejection(
-                    UserTaskIntent.COMPLETE, 1L, parameters.getLeft(), "Just an error")));
+    Mockito.when(userTaskServices.completeUserTask(anyLong(), any(), anyString()))
+        .thenReturn(
+            CompletableFuture.failedFuture(
+                new CamundaServiceException(
+                    new BrokerRejection(
+                        UserTaskIntent.COMPLETE, 1L, parameters.getLeft(), "Just an error"))));
 
     final var expectedBody =
         """
@@ -821,19 +797,15 @@ RFC 3339, section 5.6.",
         .expectBody()
         .json(expectedBody);
 
-    final var argumentCaptor = ArgumentCaptor.forClass(BrokerUserTaskCompletionRequest.class);
-    Mockito.verify(brokerClient).sendRequest(argumentCaptor.capture());
-    Assertions.assertThat(argumentCaptor.getValue().getRequestWriter())
-        .hasUserTaskKey(1L)
-        .hasAction("")
-        .hasVariables(Collections.emptyMap());
+    Mockito.verify(userTaskServices).completeUserTask(1L, Map.of(), "");
   }
 
   @ParameterizedTest
   @MethodSource("urls")
   void shouldAssignTaskWithoutActionAndAllowOverride(final String baseUrl) {
     // given
-    brokerClient.registerHandler(BrokerUserTaskAssignmentRequest.class, request -> BROKER_RESPONSE);
+    Mockito.when(userTaskServices.assignUserTask(anyLong(), anyString(), anyString(), anyBoolean()))
+        .thenReturn(BROKER_RESPONSE);
     final var request =
         """
         {
@@ -853,21 +825,16 @@ RFC 3339, section 5.6.",
         .expectBody()
         .isEmpty();
 
-    final var argumentCaptor = ArgumentCaptor.forClass(BrokerUserTaskAssignmentRequest.class);
-    Mockito.verify(brokerClient).sendRequest(argumentCaptor.capture());
-    Assertions.assertThat(argumentCaptor.getValue().getRequestWriter())
-        .hasUserTaskKey(2251799813685732L)
-        .hasAction("assign")
-        .hasAssignee("Test Assignee");
-
-    Assertions.assertThat(argumentCaptor.getValue().getIntent()).isEqualTo(UserTaskIntent.ASSIGN);
+    Mockito.verify(userTaskServices)
+        .assignUserTask(2251799813685732L, "Test Assignee", "assign", true);
   }
 
   @ParameterizedTest
   @MethodSource("urls")
   void shouldAssignTaskWithActionWithoutAllowOverride(final String baseUrl) {
     // given
-    brokerClient.registerHandler(BrokerUserTaskAssignmentRequest.class, request -> BROKER_RESPONSE);
+    Mockito.when(userTaskServices.assignUserTask(anyLong(), anyString(), anyString(), anyBoolean()))
+        .thenReturn(BROKER_RESPONSE);
     final var request =
         """
         {
@@ -888,21 +855,16 @@ RFC 3339, section 5.6.",
         .expectBody()
         .isEmpty();
 
-    final var argumentCaptor = ArgumentCaptor.forClass(BrokerUserTaskAssignmentRequest.class);
-    Mockito.verify(brokerClient).sendRequest(argumentCaptor.capture());
-    Assertions.assertThat(argumentCaptor.getValue().getRequestWriter())
-        .hasUserTaskKey(2251799813685732L)
-        .hasAction("custom action")
-        .hasAssignee("Test Assignee");
-
-    Assertions.assertThat(argumentCaptor.getValue().getIntent()).isEqualTo(UserTaskIntent.ASSIGN);
+    Mockito.verify(userTaskServices)
+        .assignUserTask(2251799813685732L, "Test Assignee", "custom action", true);
   }
 
   @ParameterizedTest
   @MethodSource("urls")
   void shouldAssignTaskWithActionWithAllowOverrideTrue(final String baseUrl) {
     // given
-    brokerClient.registerHandler(BrokerUserTaskAssignmentRequest.class, request -> BROKER_RESPONSE);
+    Mockito.when(userTaskServices.assignUserTask(anyLong(), anyString(), anyString(), anyBoolean()))
+        .thenReturn(BROKER_RESPONSE);
     final var request =
         """
         {
@@ -924,21 +886,16 @@ RFC 3339, section 5.6.",
         .expectBody()
         .isEmpty();
 
-    final var argumentCaptor = ArgumentCaptor.forClass(BrokerUserTaskAssignmentRequest.class);
-    Mockito.verify(brokerClient).sendRequest(argumentCaptor.capture());
-    Assertions.assertThat(argumentCaptor.getValue().getRequestWriter())
-        .hasUserTaskKey(2251799813685732L)
-        .hasAction("custom action")
-        .hasAssignee("Test Assignee");
-
-    Assertions.assertThat(argumentCaptor.getValue().getIntent()).isEqualTo(UserTaskIntent.ASSIGN);
+    Mockito.verify(userTaskServices)
+        .assignUserTask(2251799813685732L, "Test Assignee", "custom action", true);
   }
 
   @ParameterizedTest
   @MethodSource("urls")
   void shouldAssignTaskWithActionWithAllowOverrideFalse(final String baseUrl) {
     // gíven
-    brokerClient.registerHandler(BrokerUserTaskAssignmentRequest.class, request -> BROKER_RESPONSE);
+    Mockito.when(userTaskServices.assignUserTask(anyLong(), anyString(), anyString(), anyBoolean()))
+        .thenReturn(BROKER_RESPONSE);
     final var request =
         """
         {
@@ -960,21 +917,16 @@ RFC 3339, section 5.6.",
         .expectBody()
         .isEmpty();
 
-    final var argumentCaptor = ArgumentCaptor.forClass(BrokerUserTaskAssignmentRequest.class);
-    Mockito.verify(brokerClient).sendRequest(argumentCaptor.capture());
-    Assertions.assertThat(argumentCaptor.getValue().getRequestWriter())
-        .hasUserTaskKey(2251799813685732L)
-        .hasAction("custom action")
-        .hasAssignee("Test Assignee");
-
-    Assertions.assertThat(argumentCaptor.getValue().getIntent()).isEqualTo(UserTaskIntent.CLAIM);
+    Mockito.verify(userTaskServices)
+        .assignUserTask(2251799813685732L, "Test Assignee", "custom action", false);
   }
 
   @ParameterizedTest
   @MethodSource("urls")
   void shouldAssignTaskWithoutActionWithAllowOverrideTrue(final String baseUrl) {
     // given
-    brokerClient.registerHandler(BrokerUserTaskAssignmentRequest.class, request -> BROKER_RESPONSE);
+    Mockito.when(userTaskServices.assignUserTask(anyLong(), anyString(), anyString(), anyBoolean()))
+        .thenReturn(BROKER_RESPONSE);
     final var request =
         """
         {
@@ -995,21 +947,16 @@ RFC 3339, section 5.6.",
         .expectBody()
         .isEmpty();
 
-    final var argumentCaptor = ArgumentCaptor.forClass(BrokerUserTaskAssignmentRequest.class);
-    Mockito.verify(brokerClient).sendRequest(argumentCaptor.capture());
-    Assertions.assertThat(argumentCaptor.getValue().getRequestWriter())
-        .hasUserTaskKey(2251799813685732L)
-        .hasAction("assign")
-        .hasAssignee("Test Assignee");
-
-    Assertions.assertThat(argumentCaptor.getValue().getIntent()).isEqualTo(UserTaskIntent.ASSIGN);
+    Mockito.verify(userTaskServices)
+        .assignUserTask(2251799813685732L, "Test Assignee", "assign", true);
   }
 
   @ParameterizedTest
   @MethodSource("urls")
   void shouldAssignTaskWithoutActionWithAllowOverrideFalse(final String baseUrl) {
     // given
-    brokerClient.registerHandler(BrokerUserTaskAssignmentRequest.class, request -> BROKER_RESPONSE);
+    Mockito.when(userTaskServices.assignUserTask(anyLong(), anyString(), anyString(), anyBoolean()))
+        .thenReturn(BROKER_RESPONSE);
     final var request =
         """
         {
@@ -1030,14 +977,8 @@ RFC 3339, section 5.6.",
         .expectBody()
         .isEmpty();
 
-    final var argumentCaptor = ArgumentCaptor.forClass(BrokerUserTaskAssignmentRequest.class);
-    Mockito.verify(brokerClient).sendRequest(argumentCaptor.capture());
-    Assertions.assertThat(argumentCaptor.getValue().getRequestWriter())
-        .hasUserTaskKey(2251799813685732L)
-        .hasAction("assign")
-        .hasAssignee("Test Assignee");
-
-    Assertions.assertThat(argumentCaptor.getValue().getIntent()).isEqualTo(UserTaskIntent.CLAIM);
+    Mockito.verify(userTaskServices)
+        .assignUserTask(2251799813685732L, "Test Assignee", "assign", false);
   }
 
   @ParameterizedTest
@@ -1072,14 +1013,15 @@ RFC 3339, section 5.6.",
         .expectBody()
         .json(expectedBody);
 
-    Mockito.verifyNoInteractions(brokerClient);
+    Mockito.verifyNoInteractions(userTaskServices);
   }
 
   @ParameterizedTest
   @MethodSource("urls")
   void shouldUnassignTask(final String baseUrl) {
     // given
-    brokerClient.registerHandler(BrokerUserTaskAssignmentRequest.class, request -> BROKER_RESPONSE);
+    Mockito.when(userTaskServices.unassignUserTask(anyLong(), anyString()))
+        .thenReturn(BROKER_RESPONSE);
     // when / then
     webClient
         .delete()
@@ -1090,21 +1032,6 @@ RFC 3339, section 5.6.",
         .expectBody()
         .isEmpty();
 
-    final var argumentCaptor = ArgumentCaptor.forClass(BrokerUserTaskAssignmentRequest.class);
-    Mockito.verify(brokerClient).sendRequest(argumentCaptor.capture());
-    Assertions.assertThat(argumentCaptor.getValue().getRequestWriter())
-        .hasUserTaskKey(2251799813685732L)
-        .hasAction("unassign")
-        .hasAssignee("");
-
-    Assertions.assertThat(argumentCaptor.getValue().getIntent()).isEqualTo(UserTaskIntent.ASSIGN);
-  }
-
-  @TestConfiguration
-  static class TestUserTaskApplication {
-    @Bean
-    public StubbedBrokerClient brokerClient() {
-      return new StubbedBrokerClient();
-    }
+    Mockito.verify(userTaskServices).unassignUserTask(2251799813685732L, "unassign");
   }
 }
